将原来是dropdown组件改为userinfomenu视图

--- a/src/templates/app-tmpl.html
+++ b/src/templates/app-tmpl.html
@@ -1,9 +1,7 @@
 <div class="<%= style.wrapper %>">
   <header>
     <a href="/" class="<%= style.logo %>">X-admin v1.0</a>
-    <div class="<%= style['user-dropdown'] %>">
-
-    </div>
+    <div class="<%= style['user-dropdown'] %>"></div>
   </header>
   <main>
     <nav></nav>
