--- a/src/statics/css/displays/userinfo-menu.css
+++ b/src/statics/css/displays/userinfo-menu.css
@@ -9,13 +9,17 @@
   display: block;
   cursor: pointer;
   line-height: 28px;
-  border-radius: 4px;
+  /* border-radius: 4px;
   border: 1px solid rgba(0,0,0,.2);
   border-bottom-color: rgba(0,0,0,.3);
   background-image: linear-gradient(to bottom,#fff,#eee);
   color: #666;
-  text-shadow: 0 1px 0 #fff;
+  text-shadow: 0 1px 0 #fff;*/
+  background: transparent;
+  color: #fff;
+  border: 0 none;
   padding: 0 20px;
+  outline: none;
 }
 
 .hide {
@@ -25,7 +29,7 @@
 .dropdown-list {
   position: absolute;
   left: 0;
-  top: 23px;
+  top: 30px;
   min-width: 100%;
   padding: 5px 0;
   box-shadow: 0 2px 4px rgba(0,0,0,.12);
