菜单无限分类

--- a/src/statics/css/layouts/index.css
+++ b/src/statics/css/layouts/index.css
@@ -35,7 +35,7 @@ header {
   text-decoration: none;
 }
 
-.user-dropdown {
+.userinfo-menu {
   color: #fff;
   display: -webkit-box;
   -webkit-box-orient: vertical;
