--- a/src/templates/app-tmpl.html
+++ b/src/templates/app-tmpl.html
@@ -7,5 +7,5 @@
     <nav></nav>
     <section></section>
   </main>
-  <footer></footer>
+  <footer>Copyright ©2018 x-admin v1.0 All Rights Reserved</footer>
 </div>
