--- a/src/statics/css/layouts/index.css
+++ b/src/statics/css/layouts/index.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .wrapper {
@@ -61,8 +62,11 @@ section {
 }
 
 footer {
+  padding: 0 20px;
   line-height: 40px;
   height: 40px;
   border-top: 1px solid rgba(255, 255, 255, .2);
   background: #222;
+  color: #fff;
+  font-size: 14px;
 }
