--- a/src/templates/app-tmpl.html
+++ b/src/templates/app-tmpl.html
@@ -1,6 +1,6 @@
 <div class="<%= style.wrapper %>">
   <header>
-    <a href="/" class="<%= style.logo %>">X-admin v1.0</a>
+    <a href="/#" class="<%= style.logo %>">X-admin v1.0</a>
     <div class="<%= style['userinfo-menu'] %>"></div>
   </header>
   <main>
