--- a/src/templates/website-menu-tmpl.html
+++ b/src/templates/website-menu-tmpl.html
@@ -1,3 +1,3 @@
-<a href="<%= !menu.child && menu.url ? menu.url : 'javascript:;' %>">
-  <cite><%= menu.title %></cite>
+<a href="<%= url %>" class="<%= addBottomLineStyle %>" data-is_parent_node="<%= isParentNode %>">
+  <cite><%= title %></cite>
 </a>
