button原子组件、Table原子组件

--- a/src/templates/member-list-tmpl.html
+++ b/src/templates/member-list-tmpl.html
@@ -1,4 +1,7 @@
 <div class="<%= style[ 'panel-search' ] %>"></div>
-<div class="<%= style[ 'panel-ad' ] %>"></div>
+<div class="<%= style[ 'panel-dynamic' ] %>">
+  <div class="btns-dynamic"></div>
+  <span class="<%= style[ 'total' ] %>">共有数据: <%= totalNum %> 条</span>
+</div>
 <div class="<%= style[ 'table-show' ] %>"></div>
 <div class="<%= style[ 'panel-pagination' ] %>"></div>
