--- a/src/templates/search-tmpl.html
+++ b/src/templates/search-tmpl.html
@@ -1,3 +1,1 @@
-<div class="<%= style[ 'inner-search' ] %>">
-  <button class="<%= style[ 'btn-search' ] %>">搜索</button>
-</div>
+<div class="<%= style[ 'inner-search' ] %>"></div>
