--- a/src/statics/css/displays/search.css
+++ b/src/statics/css/displays/search.css
@@ -7,15 +7,19 @@
 }
 
 .btn-search {
-  padding: 11px 0;
+  padding: 11px 15px;
   color: #fff;
   text-align: center;
-  width: 60px;
   border-radius: 2px;
-  font-size: 14px;
+  font-size: 12px;
   background: #009688;
   border: 0 none;
   cursor: pointer;
   outline: none;
   line-height: 1;
+}
+
+.btn-disabled-search {
+  color: rgba(0, 0, 0, .25);
+  cursor: not-allowed;
 }
