--- a/src/statics/css/pages/member.css
+++ b/src/statics/css/pages/member.css
@@ -4,7 +4,20 @@
   margin-bottom: 20px;
 }
 
-.panel-ad {
+.panel-search .input-search {
+  border: 1px solid #e6e6e6;
+  border-radius: 2px;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  outline: none;
+}
+
+.panel-search .input-active-search {
+  border-color: #009688;
+}
+
+.panel-dynamic {
   background: rgb(242, 242, 242);
   margin-bottom: 10px;
   padding: 5px;
@@ -17,8 +30,51 @@
   box-sizing: border-box;
 }
 
+.panel-dynamic .btn-dynamic {
+  display: inline-block;
+  padding: 11px 15px;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  font-size: 12px;
+  border: 0 none;
+  cursor: pointer;
+  outline: none;
+  line-height: 1;
+}
+
+.panel-dynamic .btns-disabled-dynamic {
+  color: rgba(0, 0, 0, .25);
+  cursor: not-allowed;
+}
+
+.panel-dynamic .btn-dels {
+  background: #FF5722;
+  margin-right: 17px;
+}
+
+.panel-dynamic .btn-add {
+  background: #009688;
+}
+
+.total {
+  font-size: 12px;
+}
+
 .table-show {
   margin-bottom: 20px;
+}
+
+.table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  background: #fff;
+  color: #666;
+}
+
+.table tbody tr:hover {
+  background-color: #f2f2f2;
 }
 
 .panel-pagination {
