--- a/src/statics/css/pages/member.css
+++ b/src/statics/css/pages/member.css
@@ -78,8 +78,6 @@
 }
 
 .panel-pagination {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-  height: 35px;
+  padding: 0 0 20px;
+  height: 38px;
 }
